add api custom league
